--- a/views/docs.ejs
+++ b/views/docs.ejs
@@ -38,14 +38,12 @@
           </div>
           <div class="sub_content">
             <strong>Response</strong>
-            <pre>
-              <code class="language-json">
-                {
-                  "_id": "65354f3c8302539a6d924f82",
-                  "faculty": "Institute of Applied Mathematics and Computer Science"
-                }  
-              </code>
-              </pre>
+            <pre class="language-json">
+{
+  "_id": "65354f3c8302539a6d924f82",
+  "faculty": "Institute of Applied Mathematics and Computer Science"
+}</pre
+            >
           </div>
         </div>
       </section>
